--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
  			<div class="card">
  				<div class="card-body">
  					<!-- start editing here -->
- 					<h4 class="card-title">your name (pronouns) <!-- TODO: edit this --></h4>
- 					<h5 class="card-subtitle">year in school // major <!-- TODO: edit this --></h5>
- 					<p class="card-text">classes you are taking <!-- TODO: edit this --></p>
- 					<p class="card-text">fun fact about you <!-- TODO: edit this --></p>
+ 					<h4 class="card-title">Sara Grabowski (she/her)</h4>
+ 					<h5 class="card-subtitle">Junior // CS + Advertising</h5>
+ 					<p class="card-text">Classes: ADV483, BADM320, CS374, DANC116, MATH225, PLPA 200</p>
+					<div class="flex-container">
+						<div class="item"><p class="card-text">Fun fact: I like to play videogames :)</p></div>
+						<div class="item"><img src="Illungus.png" alt="Illinois Among Us" width="50" height="50"></div>
+					</div>
  					<!-- stop editing here -->
  				</div>
  			</div>
